Fixed issue with carousel on smaller screens

--- a/src/components/MainLayout/MainLayout.css
+++ b/src/components/MainLayout/MainLayout.css
@@ -114,6 +114,7 @@
 @media (max-width: 1140px) {
   .hamburger {
     display: flex;
+    top: 33px;
   }
 
   .top-bar {
